--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.Erechtheus</groupId>
     <artifactId>rabbitmq-maven-plugin</artifactId>
-    <version>0.1.7</version>
+    <version>0.1.8</version>
     <packaging>maven-plugin</packaging>
 
     <name>RabbitMQ Maven Plugin</name>
@@ -204,6 +204,11 @@
             <artifactId>commons-compress</artifactId>
             <version>${commons.compress.version}</version>
         </dependency>
+	<dependency>
+	  <groupId>org.tukaani</groupId>
+	  <artifactId>xz</artifactId>
+	  <version>1.5</version>
+	</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
