--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
 	<dependency>
 	  <groupId>org.tukaani</groupId>
 	  <artifactId>xz</artifactId>
-	  <version>1.5</version>
+	  <version>${org.tukaani.version}</version>
 	</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -269,6 +269,7 @@
         <plexus.utils.version>3.0.21</plexus.utils.version>
         <commons.io.version>2.3</commons.io.version>
         <commons.compress.version>1.9</commons.compress.version>
+        <org.tukaani.version>1.5</org.tukaani.version>
         <commons.lang.version>3.3.2</commons.lang.version>
         <guava.version>18.0</guava.version>
         <http.client.version>4.4</http.client.version>
