--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
             <artifactId>commons-compress</artifactId>
             <version>${commons.compress.version}</version>
         </dependency>
+	<dependency>
+	  <groupId>org.tukaani</groupId>
+	  <artifactId>xz</artifactId>
+	  <version>${org.tukaani.version}</version>
+	</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -264,6 +269,7 @@
         <plexus.utils.version>3.0.21</plexus.utils.version>
         <commons.io.version>2.3</commons.io.version>
         <commons.compress.version>1.9</commons.compress.version>
+        <org.tukaani.version>1.5</org.tukaani.version>
         <commons.lang.version>3.3.2</commons.lang.version>
         <guava.version>18.0</guava.version>
         <http.client.version>4.4</http.client.version>
